dataset/local/df_check_cert_curl/resource.yaml
apiVersion: dockerfile.kyverno.io/v1
kind: Dockerfile
metadata:
  name: good-dockerfile
Stages:
  - BaseName: ubuntu:22.04
    Commands:
      - Name: RUN
        CmdLine:
          - "curl -LO https://example.com/file.tar.gz"
        PrependShell: true
---
apiVersion: dockerfile.kyverno.io/v1
kind: Dockerfile
metadata:
  name: bad-dockerfile
Stages:
  - BaseName: ubuntu:22.04
    Commands:
      - Name: RUN
        CmdLine:
          - "curl --insecure -LO https://example.com/file.tar.gz"
        PrependShell: true
