dataset/local/df_check_cert_curl/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: check-certificate-validation-curl
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
  - policy: check-certificate-validation-curl
    kind: Dockerfile
    resources:
      - good-dockerfile
    result: pass
  - policy: check-certificate-validation-curl
    kind: Dockerfile
    resources:
      - bad-dockerfile
    result: fail
